# x4-llm-copilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  HERMES.md  INTEGRATION.md  ROADMAP.md  SAVE_SCOPED_COCKPIT_SESSIONS.md
examples/: ambient_context_payload.json  faction_state_payload.json  sector_objects_payload.json  ship_status_payload.json  trade_payload.json
extension/x4_llm_copilot/: content.xml  ui.xml
extension/x4_llm_copilot/md/: x4_llm_copilot.xml
extension/x4_llm_copilot/ui/: x4_llm_copilot.lua
extension/x4_llm_copilot/ui/x4_llm_copilot/: ambient.lua
src/x4_copilot/: __init__.py  advisor.py  chat_bridge.py  cli.py  cockpit_session.py  intent.py  llm.py  mcp_server.py  models.py  pipe.py  protocol.py  server.py  tools.py
tests/: test_advisor_faction.py  test_audit_fixes.py  test_chat_bridge.py  test_cockpit_chat_ui.py  test_intent.py  test_mcp_integration.py  test_ollama_provider.py  test_payloads.py  test_pipe_utf8.py  test_protocol_server.py  test_raw_telemetry.py  test_tools_surface.py
