[project]
name = "x4-llm-copilot"
version = "0.1.0"
description = "X4: Foundations LLM co-pilot adapter spine: telemetry schemas, intent routing, named-pipe bridge, and advisor CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "LucidPaths" }]
dependencies = []

[project.optional-dependencies]
winpipe = ["pywin32>=306; platform_system == 'Windows'"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
x4-copilot = "x4_copilot.cli:main"
x4-copilot-mcp = "x4_copilot.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x4_copilot"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
